Fix navbar spacing and mobile background

--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -118,7 +118,8 @@
   .NavBar-list {
     display: flex;
     align-items: center;
-    padding: 0 calc(2.5rem * 100 / 100);
+    justify-content: start;
+    padding: 0;
   }
 
   .NavBar-logo {
